--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@lof-digital-www/calendar": ["libs/calendar/src/index.ts"],
       "@lof-digital-www/home-page": ["libs/home-page/src/index.ts"],
+      "@lof-digital-www/map": ["libs/map/src/index.ts"],
       "@lof-digital-www/shared": ["libs/shared/src/index.ts"],
       "@lof-digital-www/www-events": ["libs/www-events/src/index.ts"]
     }
